Fix positioning of logos on Firefox

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -563,11 +563,6 @@
       width: 100%;
     }
 
-    .slick-list {
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
     .slick-track {
       display: flex;
       justify-content: space-between;
